--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>function</module>
-        <module>alghoritm</module>
+        <module>algorithm</module>
         <module>domain</module>
     </modules>
 
@@ -24,9 +24,60 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
             <version>5.9.2</version>
-            <scope>test</scope>
-        </dependency>    
+        </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M7</version>
+                <configuration>
+                    <useFile>false</useFile>
+                </configuration>
+            </plugin>
+           <plugin>
+               <groupId>org.jacoco</groupId>
+               <artifactId>jacoco-maven-plugin</artifactId>
+               <version>0.8.10</version>
+               <executions>
+                   <execution>
+                       <goals>
+                           <goal>prepare-agent</goal>
+                       </goals>
+                   </execution>
+                   <execution>
+                       <id>report</id>
+                       <phase>prepare-package</phase>
+                       <goals>
+                           <goal>report</goal>
+                       </goals>
+                   </execution>
+                   <execution>
+                       <id>jacoco-check</id>
+                       <goals>
+                           <goal>check</goal>
+                       </goals>
+                       <configuration>
+                           <rules>
+                               <rule>
+                                   <element>PACKAGE</element>
+                                   <limits>
+                                       <limit>
+                                           <counter>LINE</counter>
+                                           <value>COVEREDRATIO</value>
+                                           <minimum>0.9</minimum>
+                                       </limit>
+                                   </limits>
+                               </rule>
+                           </rules>
+                       </configuration>
+                   </execution>
+               </executions>
+           </plugin>
+        </plugins>
+    </build>
     
 
 </project>
