--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
                    </execution>
                    <execution>
                        <id>report</id>
-                       <phase>prepare-package</phase>
+                       <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
@@ -59,6 +59,7 @@
                        <goals>
                            <goal>check</goal>
                        </goals>
+                       <phase>test</phase>
                        <configuration>
                            <rules>
                                <rule>
@@ -67,7 +68,7 @@
                                        <limit>
                                            <counter>LINE</counter>
                                            <value>COVEREDRATIO</value>
-                                           <minimum>0.9</minimum>
+                                           <minimum>90%</minimum>
                                        </limit>
                                    </limits>
                                </rule>
