--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,10 +34,14 @@ jobs:
       with:
         coverage_results_path: aggregate-report/target/site/jacoco-aggregate/jacoco.xml
         coverage_report_name: Coverage
-        coverage_report_title: Algorithm Module Coverage Report
+        coverage_report_title: Coverate report
         github_token: ${{ secrets.GITHUB_TOKEN }}
         skip_check_run: false
         minimum_coverage: 90
         fail_below_threshold: true
-        publish_only_summary: false
-
+        publish_only_summary: true
+    - name: upload-coverage-report-artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: coverage-report
+        path: aggregate-report/target/site/jacoco-aggregate
