--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,14 +10,15 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "master", "algo_tests" ]
   pull_request:
     branches: [ "master" ]
 
 jobs:
-  build:
-
+  run-tests:
+    permissions: write-all
     runs-on: ubuntu-latest
+    environment: test
 
     steps:
     - uses: actions/checkout@v3
@@ -27,5 +28,25 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+    - name: Test with Maven
+      run: mvn -B test --file pom.xml
+    - uses: nelonoel/branch-name@v1.0.1
+    - name: Deploy coverage report
+      uses: jsmrcaga/action-netlify-deploy@master
+      with:
+        NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+        NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+        build_directory: aggregate-report/target/site/jacoco-aggregate
+        install_command: "echo Skipping installing the dependencies"
+        build_command: "echo Skipping building the web files"
+        deploy_alias: ${{ env.BRANCH_NAME }}
+    - name: Status check
+      uses: Sibz/github-status-action@v1.1.1
+      with:
+        authToken: ${{ secrets.GITHUB_TOKEN }}
+        context: Netlify preview
+        state: success
+        target_url: ${{ env.NETLIFY_PREVIEW_URL }}
+    - name: Publish Test Report
+      if: success() || failure()
+      uses: scacap/action-surefire-report@v1
