--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,9 @@
     <packaging>pom</packaging>
     <modules>
         <module>function</module>
-        <module>alghoritm</module>
+        <module>algorithm</module>
         <module>domain</module>
+        <module>aggregate-report</module>
     </modules>
 
     <properties>
@@ -24,9 +25,85 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
             <version>5.9.2</version>
-            <scope>test</scope>
-        </dependency>    
+        </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>net.revelc.code.formatter</groupId>
+                <artifactId>formatter-maven-plugin</artifactId>
+                <version>2.23.0</version>
+                <configuration>
+                    <encoding>utf-8</encoding>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>3.3.1</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                        <phase>test-compile</phase>
+                    </execution>
+                </executions>
+                <configuration>
+                    <configLocation>google_checks.xml</configLocation>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M7</version>
+                <configuration>
+                    <useFile>false</useFile>
+                </configuration>
+            </plugin>
+           <plugin>
+               <groupId>org.jacoco</groupId>
+               <artifactId>jacoco-maven-plugin</artifactId>
+               <version>0.8.10</version>
+               <executions>
+                   <execution>
+                       <goals>
+                           <goal>prepare-agent</goal>
+                       </goals>
+                   </execution>
+                   <execution>
+                       <id>report</id>
+                       <phase>test</phase>
+                       <goals>
+                           <goal>report</goal>
+                       </goals>
+                   </execution>
+                   <execution>
+                       <id>jacoco-check</id>
+                       <goals>
+                           <goal>check</goal>
+                       </goals>
+                       <phase>test</phase>
+                       <configuration>
+                           <rules>
+                               <rule>
+                                   <element>PACKAGE</element>
+                                   <limits>
+                                       <limit>
+                                           <counter>LINE</counter>
+                                           <value>COVEREDRATIO</value>
+                                           <minimum>90%</minimum>
+                                       </limit>
+                                   </limits>
+                               </rule>
+                           </rules>
+                       </configuration>
+                   </execution>
+               </executions>
+           </plugin>
+        </plugins>
+    </build>
     
 
 </project>
