--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
                 <groupId>net.revelc.code.formatter</groupId>
                 <artifactId>formatter-maven-plugin</artifactId>
                 <version>2.23.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>format</goal>
+                        </goals>
+                    </execution>
+        </executions>
                 <configuration>
                     <encoding>utf-8</encoding>
                 </configuration>
